WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
115544
PDFPlugin: Changes being made to active annotation aren't saved when the PDF is exported
https://bugs.webkit.org/show_bug.cgi?id=115544
Summary
PDFPlugin: Changes being made to active annotation aren't saved when the PDF ...
Tim Horton
Reported
2013-05-03 04:31:08 PDT
Steps to Reproduce: 1. Start editing a field in a PDFPlugin. Type some stuff, don't commit it. 2. Hit Cmd-S. Save the file. Expected: A file with the stuff you typed in the field. Actual: The field is blank. Notes: We need to commit before we return liveData(), before we decide whether the PDF form data has been mutated or not.
Attachments
patch
(2.78 KB, patch)
2013-05-03 04:35 PDT
,
Tim Horton
ap
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2013-05-03 04:32:25 PDT
<
rdar://problem/13801789
>
Tim Horton
Comment 2
2013-05-03 04:35:55 PDT
Created
attachment 200407
[details]
patch
Tim Horton
Comment 3
2013-05-03 13:56:43 PDT
http://trac.webkit.org/changeset/149536
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug