PDFPlugin: Changes being made to active annotation aren't saved when the PDF is exported https://bugs.webkit.org/show_bug.cgi?id=115544 <rdar://problem/13801789>

Reviewed by Alexey Proskuryakov.

Commit changes to the active annotation (if there is one) before
returning the live PDF data, so that said changes are represented
in the exported or printed output.

* WebProcess/Plugins/PDF/PDFPlugin.h: Override liveData.
* WebProcess/Plugins/PDF/PDFPlugin.mm:
(WebKit::PDFPlugin::liveData): Commit the active annotation if there is one.
* WebProcess/Plugins/PDF/SimplePDFPlugin.h:
(SimplePDFPlugin): Make liveData virtual.


Canonical link: https://commits.webkit.org/134002@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149536 268f45cc-cd09-0410-ab3c-d52691b4dbfc